--- a/Kapitel_6.tex
+++ b/Kapitel_6.tex
@@ -136,7 +136,7 @@ auch als Vorspeise beim Wintergrillen eine sehr gute Wahl.
 	\item 2 EL Balsamicocreme
 	\item 1 EL Traubenkernöl (oder Olivenöl)
 	\item 1 TL Honig
-	\item  Salz
+	\item  Salz \& Pfeffer
 \end{itemize}
 
 \paragraph{Zubereitung}
