--- a/Kapitel_1.tex
+++ b/Kapitel_1.tex
@@ -1,7 +1,7 @@
 %!TEX root = Vorlage_Buch.tex
 \chapter{Grills, Smoker und mehr}\label{Chapter1}
 
-	\lettrine[lines=3]{I}{diesem Kapitel} werde ich auf die Grundlagen des Grillens 
+	\lettrine[lines=3]{I}{n diesem Kapitel} werde ich auf die Grundlagen des Grillens 
 	eingehen. Den Schwerpunkt lege ich dabei auf die
 	verschiedenen Grills, Smoker und den Backofen. Alle Geräte ich vorstelle sind 
 	in meinem Besitz. So kann ich  meine Erfahrungen und die Eigenheiten meiner
