--- a/Vorlage_Buch.tex
+++ b/Vorlage_Buch.tex
@@ -5,7 +5,7 @@
 \documentclass[pdftext, bcor=7mm, ngerman]{scrbook}
 \usepackage{babel}
 \usepackage{fontspec}
-\setmainfont[Ligatures=TeX,Numbers=OldStyle]{Linux Libertine O} 
+\setmainfont[Ligatures=TeX,Numbers=OldStyle]{Linux Libertine O}
 %\setsansfont[Ligatures=TeX]{Linux Biolinum O}
 %\setmonofont[Ligatures=TeX,Scale=0.7]{Source Code Pro}
 %\usepackage[babel,german=guillemets]{csquotes}
@@ -24,23 +24,27 @@
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{floatflt}
+%\usepackage{xcolor}
 %\usepackage{marvosym}
 %\usepackage{xcookybooky}
 %\usepackage{cookingsymbols}
 %\ChTitleVar{\Large\rmfamily}
 %\ChNameVar{\Large\sffamily}
 \usepackage{lettrine,ellipsis,microtype,selnolig}
-\usepackage[colorlinks=false,pdfborder={0 0 0},unicode,bookmarksnumbered]{hyperref}
+\usepackage[colorlinks=true,pdfborder={0 0 0},unicode,bookmarksnumbered]{hyperref}
 \usepackage{enumitem}
 \usepackage{varioref}
 \usepackage{cleveref}
 \usepackage{multicol}
+\usepackage{wallpaper}
 %\usepackage[landscape]{geometry}
 %\includeonly{Kapitel_2}
 %\usepackage[color=blue,a3,frame,center]{crop}
 
 
 \begin{document}
+
+\ThisCenterWallPaper{2.1}{pics/Buffalo_Wings1}
 
 
 %{\addfontfeatures{Ligatures={Common,Rare}}
@@ -53,11 +57,11 @@
 
 
 \begin{titlepage}
-	\subject{Kochen mit kurzen Hosen}
-	\title{\Huge \textsc{Einführung in die Outdoor-Küche}}
-	\subtitle{Genießen im Freien}
-	\author{Uwe Feith}
-	\date{Dezember 2025}
+	\subject{\huge\textsc{Kochen in kurzen Hosen}}
+	\title{\Huge\textrm{\textsc{Einführung in die Outdoor-Küche}}}
+%	\subtitle{Genießen im Freien}
+%	\author{Uwe Feith}
+    \date{}
 \end{titlepage}
 \dedication{Für meine Familie und lieben Freunde, \\
 die mutig und selbstlos die neusten Kreationen kosten\\}
