--- a/Vorlage_Buch.tex
+++ b/Vorlage_Buch.tex
@@ -60,7 +60,7 @@
 	\subject{\huge\textsc{Kochen in kurzen Hosen}}
 	\title{\Huge\textrm{\textsc{Einführung in die Outdoor-Küche}}}
 %	\subtitle{Genießen im Freien}
-%	\author{Uwe Feith}
+	\author{Uwe Feith}
     \date{}
 \end{titlepage}
 \dedication{Für meine Familie und lieben Freunde, \\
