--- a/Kapitel_1.tex
+++ b/Kapitel_1.tex
@@ -63,7 +63,7 @@ In der folgenden Liste sind die Geräte aufgelistet, die ich euch vorstellen wer
 	bewegen.  Die Unterschiede liegen meistens im Zubehör und in der 
 	Ausstattung.
 	
-	Wir fangen mit dem Kugelgrill (siehe Abbildung~\vref{Kugelgrill}) an. Der Aufbau des Kugelgrills ist recht simpel. 
+	Wir fangen mit dem Kugelgrill (siehe Abbildung~\vref{fig:Kugelgrill}) an. Der Aufbau des Kugelgrills ist recht simpel. 
 	Es handelt sich um eine zweigeteilte
 	Kugel, einem Kessel und dem Deckel. Kessel wie Deckel sind mit 
 	Lüftungsschlitzen ausgestattet die je 
