Bild hinzugefügt Kapitel 2 überarbeitet Kapitel 7 überarbeitet

--- a/Kapitel_2.tex
+++ b/Kapitel_2.tex
@@ -978,28 +978,58 @@ Das Chili in einer Schüssel servieren und Weißbrot dazu reichen.
 
 \subsection{Sardinen vom Grill}
 
-
 \paragraph{Geräte}
+
+\begin{itemize}[noitemsep]
+	\item Kugelgrill
+	\item Kamado Grill
+	\item Gasgrill
+\end{itemize}
 
 \paragraph{Zutaten}
 
+\begin{itemize}[noitemsep]
+	\item Sardinen, ausgenommen
+	\item Salz \& Pfeffer
+	\item Eine Zitronenscheibe pro Sardine
+\end{itemize}
+
 \paragraph{Zubereitung}
+
+Den Gasgrill auf ca. 200°C vorheizen. Den Rost mit Trennspray einsprühen,  beim Einsprühen gibt es Stichflammen, da die Brenner eingeschaltet sind. Die Sardinen salzen und ca. eine Stunde liegen lassen. Danach die Sardinen auf den Grill legen und von jeder Seite ca. 3 Minuten, je nach Größe,  grillen. 
+
+\begin{figure}[htbp]
+	\centering
+	\begin{minipage}{1\textwidth}
+		\centering
+		\includegraphics[width=.9\linewidth]{pics/Gegrillte_Sardinen}
+		\captionof{figure}{Gegrillte Sardinen}
+		\label{fig:Gegrillte_Sardinen}
+	\end{minipage}
+\end{figure}
+\newpage
 
 \subsection{Dorade Royal im Kartoffelbett}
 
 \paragraph{Geräte}
 
 \begin{itemize}[noitemsep]
-	\item Holzbackofen
+	\item Gasgrill
 \end{itemize}
 
 \paragraph{Zutaten}
+
+\begin{itemize}[noitemsep]
+	\item 1 Dorade Royal pro Person
+	
+\end{itemize}
 
 \paragraph{Zubereitung}
 
 \subsection{Spanische Fischsuppe}
 
 \paragraph{Geräte}
+
 
 \paragraph{Zutaten}
 
