--- a/Kapitel_7.tex
+++ b/Kapitel_7.tex
@@ -496,7 +496,7 @@ Nocken, einer Rolle oder gar nicht formen.
 	\item 1 TL Delikatesssenf
 	\item 1 EL Orangensaft
 	\item 1 TL Zitronensaft
-	\item 200 ml Rapsöl (oder eine anderes geschmacksneutrales Öl)
+	\item 200 ml Rapsöl (oder ein anderes geschmacksneutrales Öl)
 	\item Salz \& Pfeffer
 	\item Orangentrester
 \end{itemize}
