--- a/Kapitel_2.tex
+++ b/Kapitel_2.tex
@@ -297,8 +297,6 @@ legen und eine halbe bis eine Stunde ruhen lassen. Danach das Brisket (siehe sie
 \end{figure}
 \newpage
 
-
-
 \subsection{Tomahawk Steak}
 
 \paragraph{Geräte}
@@ -327,15 +325,15 @@ schneiden und servieren.
 Dazu den Eisbergsalat mit Champignons und Tomatendressing reichen.
 Ich bevorzuge dazu einen schönen Shiraz, z.B. Fat Baron 2022.
 \newpage
-%\begin{figure}[htbp]
-%	\centering
-%	\begin{minipage}{1\textwidth}
-%	\centering	
-%	\includegraphics[width=1\linewidth]{pics/Tomahawk_roh}
-%	\captionof{figure}{Tomahawk Steak vor dem Grillen}
-%	\label{fig:Toma1}
-%	\end{minipage}
-%\end{figure}
+\begin{figure}[htbp]
+	\centering
+	\begin{minipage}{1\textwidth}
+	\centering	
+	\includegraphics[width=1\linewidth]{pics/Tomahawk_roh}
+	\captionof{figure}{Tomahawk Steak vor dem Grillen}
+	\label{fig:Toma1}
+	\end{minipage}
+\end{figure}
 
 \begin{figure}[htbp]
 	\centering
