--- a/Kapitel_7.tex
+++ b/Kapitel_7.tex
@@ -295,7 +295,7 @@ Ich habe hier ein Rezept zusammengestellt, das nicht nur super schmeckt
 sondern auch leicht nachzukochen ist. 
 \newline
 
-\paragraph{Grundrezept für das Ketchup}\label{Ketchup}l
+\paragraph{Grundrezept für das Ketchup}\label{Ketchup}
 
 \begin{itemize}[noitemsep]
 	\item 1,5 kg Tomaten (am Besten Flaschentomaten)
@@ -504,7 +504,10 @@ Nocken, einer Rolle oder gar nicht formen.
 \paragraph{Zubereitung}
 
 Alle Zutaten sollten Zimmertemperatur haben, nur so können sie sich perfekt 
-verbinden. Das Eigelb, Senf, Orangen- und Zitronensaft vermengen. Öl unter Rühren zugeben, am Anfang sehr langsam, später dann schneller. Sobald die Masse die gewünschte Konsistenz erreicht hat, wird der Orangentrester zugeben und die Mayonnaise mit Salz und Pfeffer abgeschmeckt.
+verbinden. Das Eigelb, Senf, Orangen- und Zitronensaft vermengen. Öl unter 
+Rühren zugeben, am Anfang sehr langsam, später dann schneller. Sobald die 
+Masse die gewünschte Konsistenz erreicht hat, wird der Orangentrester 
+zugeben und die Mayonnaise mit Salz und Pfeffer abgeschmeckt.
 
 \subsection{Uwe's Kürbiskernpesto mit Chili}
 
@@ -533,8 +536,12 @@ verbinden. Das Eigelb, Senf, Orangen- und Zitronensaft vermengen. Öl unter Rüh
 
 \paragraph{Zubereitung}
 
-Die Kürbiskerne in einer Pfanne ohne Fett rösten und anschließend abkühlen lassen.
+Die Kürbiskerne in einer Pfanne ohne Fett rösten und anschließend abkühlen 
+lassen.
 
 Den Parmesan fein reiben und die Chili sehr fein würfeln und zur Seite stellen.
 
-Knoblauchzehe, Kürbiskerne, Orangenabrieb, Basilikum, Olivenöl, Curry und Chilipulver in den Mixer geben und fein pürieren. Anschließend den Parmesan zusammen mit den Chili-Würfeln und dem Kürbiskernöl unter die Masse rühren, nicht mehr mixen. Das ganze mit Salz und Pfeffer abschmecken.
+Knoblauchzehe, Kürbiskerne, Orangenabrieb, Basilikum, Olivenöl, Curry und 
+Chilipulver in den Mixer geben und fein pürieren. Anschließend den Parmesan 
+zusammen mit den Chili-Würfeln und dem Kürbiskernöl unter die Masse 
+rühren, nicht mehr mixen. Das ganze mit Salz und Pfeffer abschmecken.
