--- a/Vorlage_Buch.tex
+++ b/Vorlage_Buch.tex
@@ -31,7 +31,7 @@
 %\ChTitleVar{\Large\rmfamily}
 %\ChNameVar{\Large\sffamily}
 \usepackage{lettrine,ellipsis,microtype,selnolig}
-\usepackage[colorlinks=true,pdfborder={0 0 0},unicode,bookmarksnumbered]{hyperref}
+\usepackage[colorlinks=true, linkcolor = blue, pdfborder={0 0 0},unicode,bookmarksnumbered]{hyperref}
 \usepackage{enumitem}
 \usepackage{varioref}
 \usepackage{cleveref}
