Alle Kapitel umbennant

--- a/Kapitel_2 Tierisch Gutes.tex
+++ b/Kapitel_2 Tierisch Gutes.tex
@@ -261,7 +261,7 @@ Das geht sehr schnell.
 \paragraph{Zutaten}
 
 \begin{itemize}[noitemsep]
-	\item 1 Rinderbrust full packer von der Simmentaler Färse(Brust bestehend aus Flat and point, pariert ca. 5,5 bis 6,0 kg)
+	\item 1 Rinderbrust full packer von der Simmentaler Färse (Brust bestehend aus Flat and point, pariert ca. 5,5 bis 6,0 kg)
 	\item grobes Salz (hier Himalaya-Salz, ca. 9 g/ kg Fleisch)
 	\item schwarzer Pfeffer, ganz (ich verwende Telly Cherry Pfeffer, ca. 9 g/ kg Fleisch)
 	\item Rauch (ich verwende Apple Wood Chuncks)	
@@ -277,13 +277,13 @@ Salz-Pfeffermischung geben. Das Fleisch auf den oberen Rost legen und den Deckel
 wieder schließen. Apple Wood Chuncks auf die Holzkohle legen, so dass Rauch für ca. 1 
 Stunde entsteht. Das Fleisch von Zeit zu Zeit mit etwas Flüssigkeit besprühen, damit die 
 dünnen Enden nicht zu stark bräunen. Sobald das Fleisch eine gute Farbe hat, nach ca. 
-2,5 bis 3 Stunden, in Butchers paper mit etwas Rinderfond, Apfelsaft oder Wasser lagen 
-und solange weitergaren bis ein e Kerntemperatur von 95°C erreicht wird. Wichtiger als 
-die Temperatur ist allerdings das widerstandslos eindrigen des Messfühlers. Sobald 
-noch eine spürbarer Widerstand zu fühlen ist, ist das Brisket noch nicht fertig. 
+2,5 bis 3 Stunden, in Butchers paper mit etwas Rinderfond, Apfelsaft oder Wasser einschlagen
+und solange weiter garen bis eine Kerntemperatur von 95°C erreicht wird. Wichtiger als 
+die Temperatur ist allerdings ein widerstandsloses eindringen des Messfühlers. Sobald 
+noch ein spürbarer Widerstand zu fühlen ist, ist das Brisket noch nicht fertig. 
 
 Wenn das Brisket fertig gegart ist, noch eingepackt in eine Thermobox oder Styroporbox 
-legen und eine halbe bis eine Stunde ruhen lassen. Danach das Brisket (siehe siehe Abbildung~\vref{fig:Brisket})mit Coleslaw
+legen und eine halbe bis eine Stunde ruhen lassen. Danach das Brisket (siehe siehe Abbildung~\vref{fig:Brisket}) mit Coleslaw
  (Rezept siehe Kapitel~\ref{Chapter5} \vref{Coleslaw}) und beliebigen Beilagen servieren.
 
 \begin{figure}[htbp]
@@ -316,7 +316,7 @@ legen und eine halbe bis eine Stunde ruhen lassen. Danach das Brisket (siehe sie
 
 \paragraph{Zubereitung}
 
-Den Keramikgrill hochheizen und die Temperatur auf 150°C einstellen.
+Den Keramikgrill hoch heizen und die Temperatur auf 150°C einstellen.
 Das Steak in der Beefbox von jeder Seite ca. 1 Minute und 30 Sekunden scharf 
 angrillen, evtl. kann es länger gehen bis das Fleisch schön karamellisiert ist.
 Das angegrillte Steak auf dem Keramikgrill je nach Geschmack garziehen siehe 
@@ -385,8 +385,6 @@ innerer Ofen und sorgt für eine angenehme Wärme.
 	\item Butter
 \end{itemize}
 
-
-
 \paragraph{Zubereitung}
 
 Rote Zwiebeln hacken. Knoblauchzehen mit einer Prise Salz zerdrücken. 
@@ -420,9 +418,110 @@ rein. Das Chili ist für Erwachsene und nix für schlechte Nerven.
 \end{figure}
 \newpage
 
+
+\subsubsection{Helles Chili}\label{Helles Chili}
+
+\paragraph{Geräte}
+
+\begin{itemize}[noitemsep]
+	\item Dutch oven
+\end{itemize}
+
+\paragraph{Zutaten}
+
+\begin{itemize}[noitemsep]
+	\item  500 g Hühner- oder Putenbrust
+	\item 1 Gemüsezwiebel
+	\item 1 chinesischer Knoblauch
+	\item 1 Dose Mais (400 g)
+	\item 2 Dosen Weiße Bohnen (400 g)
+	\item 1 Grüne Paprikaschote
+	\item 2 cl Veterano Brandy oder Goldener Tequila
+	\item 1 EL Berberitze (für die Säure)
+	\item 3-5 Lemondrop Chilis (je nach Geschmack)
+	\item 50 ml Olivenöl
+	\item 50 ml Sonnenblumenöl
+	\item 20 g Weiße Schokolade
+	\item 1 EL Gekörnte Brühe
+	\item 1/2 TL Piment, ganz
+	\item 1/2 TL Kardamom
+	\item 1 TL geriebener Ingwer
+	\item 1/2 TL Koriandersamen
+	\item 1 Prise Zimt
+	\item Salz \& Pfeffer
+	\item 200 ml Wasser
+\end{itemize}
+
+\paragraph{Zubereitung}
+
+Piment, Kardamom und Koriandersamen in einer Pfanne anrösten bis Knackgeräusche zu hören sind. Abkühlen lassen und fein mörsern oder in einer Gewürzmühle mahlen. Danach mit den anderen Gewürzen, bis auf Salz und Pfeffer, vermischen und zur Seite stellen.
+Die Zwiebeln, die Chilis und den Knoblauch in Würfel schneiden und im Olivenöl andünsten. Zwischenzeitlich die Hühner- oder Putenbrust und die Paprikaschote in Würfel (ca. 1 cm Kantenlänge) schneiden und das Fleisch im Sonnenblumenöl scharf und kurz anbraten.
+Die angedünsteten Zutaten zu dem Fleisch geben, nochmals bei starker Hitze rösten um Röststoffe zu entwickeln. Den Tequila oder Brandy zugeben, sobald der Alkohol verkocht ist mit dem Wasser ablöschen. Den Mais, die Berberitze  und den Paprika zugeben, das Ganze 15 Minuten bei mittlerer Hitze ohne Deckel köcheln lassen.  
+Die Bohnen und die Gewürze zugeben und alles nochmals 15 Minuten ohne Deckel köcheln lassen. Mit Salz und Pfeffer abschmecken.
+Das Chili in einer Schüssel servieren und Weißbrot dazu reichen.
+\newpage
+
+\subsection{Rinderrouladen aus dem Dutch oven}
+
+\paragraph{Geräte}
+
+\begin{itemize}[noitemsep]
+	\item Dutch oven
+\end{itemize}
+
+\paragraph{Zutaten}
+
+\begin{itemize}[noitemsep]
+	\item 1- 2 Rouladen pro Person
+	\item 1 EL Senf pro Roulade
+	\item 1/4 Gewürzgurke pro Roulade (längs geviertelt)
+	\item 1/2 kleine Zwiebel Pro Roulade
+	\item 1-2 Scheiben Speck oder Bacon pro Roulade
+	\item Salz \& Pfeffer
+	\item Paprikapulver
+	\item etwas Zucker
+	\item 1 EL Tomatenmark
+	\item 2 EL Öl zum Braten
+	\item etwas Wurzelgemüse (nach Geschmack)
+	\item Bratensauce
+	\item etwas Sahne (oder Saucenbinder)
+\end{itemize}
+
+\paragraph{Zubereitung}
+
+Die Rouladen auf einem Schneidebrett aus legen und mit Senf bestreichen, 
+mit Salz und Pfeffer würzen. Danach den Speck oder Bacon und 
+Zwiebelringe längs auf die Roulade legen. Die geviertelte Gurke quer an 
+eine kurze Seite legen und die Roulade um die Gurke aufrollen und mit 
+Zahnstochern fixieren.
+Die Rouladen mit dem Öl im Dutch oven von allen Seiten dunkelbraun 
+anbraten. Dazu soviel Kohle verwenden wie unter den Dutch oven passen. 
+Die fertig gebratenen Rouladen zu Seite legen. 
+Das Tomatenmark im Dutch anbraten, bitte nicht bis es bitter wird. 
+Reichlich Pfeffer, Salz und Paprika, die restlichen Zwiebeln und das 
+Wurzelgemüse dazu geben. Dananch mit der Bratensoße auffüllen und die 
+dem Bratensatz durch rühren lösen. Die Rouladen in die Soße zurückgeben 
+und 2 bis 3 Stunden simmern lassen. Die Rouladen ab un zu drehen und 
+dabei kontrollieren ob das Fleisch schon mürbe ist. Ca. 10 Kohlen unter 
+dem Feuertopf sollten reichen. Kohlen auf dem Deckel sind nicht 
+notwendig.
+\newpage
+
+\begin{figure}[htbp]
+	\centering
+	\begin{minipage}{1\textwidth}
+		\centering
+		\includegraphics[width=.9\linewidth]{pics/Rinderrouladen}
+		\captionof{figure}{Rinderrouladen aus dem Dutch oven}
+		\label{fig:Rinderrouladen}
+	\end{minipage}
+\end{figure}
+\newpage
+
 \section{Schwein}
 
-Es gibt deutlich weniger Schweinerassen die zum Grillen sehr beleibt 
+Es gibt deutlich weniger Schweinerassen als Rinderrassen die zum Grillen 
+sehr beliebt 
 sind. Hier werde ich einige der bedeutendsten Rassen vorstellen. Die 
 Schweinerassen  sind sowohl in Gourmet-Kreisen als auch in der 
 BBQ-Szene bekannt und beliebt.
@@ -441,7 +540,7 @@ BBQ-Szene bekannt und beliebt.
 	Ihr auf eurem Teller: Das Fleisch ist feinfaserig, zart und hat einen 
 	kräftigen Geschmack
 	\item[Das Iberico-Schwein] ist wohl das edelste Schwein, es sind 
-	halbwilde Schweine die pfleglos im freien gehalten werden. Da nicht 
+	halbwilde Schweine die pfleglos im Freien gehalten werden. Da nicht 
 	zugefüttert wird, ernähren sich die Schweine von Eicheln der Stein- 
 	und Korkeichen sowie Kräutern. Als Eiweißquellen dienen, 
 	Regenwürmer, Käfer, Schnecken. 
@@ -930,46 +1029,6 @@ herzlichst.
 \end{figure}
 \newpage
 
-\subsection{Helles Chili}\label{Helles Chili}
-
-\paragraph{Geräte}
-
-\begin{itemize}[noitemsep]
-	\item Dutch oven
-\end{itemize}
-
-\paragraph{Zutaten}
-
-\begin{itemize}[noitemsep]
-	\item  500 g Hühner- oder Putenbrust
-	\item 1 Gemüsezwiebel
-	\item 1 chinesischer Knoblauch
-	\item 1 Dose Mais (400 g)
-	\item 2 Dosen Weiße Bohnen (400 g)
-	\item 1 Grüne Paprikaschote
-	\item 2 cl Veterano Brandy oder Goldener Tequila
-	\item 1 EL Berberitze (für die Säure)
-	\item 3-5 Lemondrop Chilis (je nach Geschmack)
-	\item 50 ml Olivenöl
-	\item 50 ml Sonnenblumenöl
-	\item 20 g Weiße Schokolade
-	\item 1 EL Gekörnte Brühe
-	\item 1/2 TL Piment, ganz
-	\item 1/2 TL Kardamom
-	\item 1 TL geriebener Ingwer
-	\item 1/2 TL Koriandersamen
-	\item 1 Prise Zimt
-	\item Salz \& Pfeffer
-	\item 200 ml Wasser
-\end{itemize}
-
-\paragraph{Zubereitung}
-
-Piment, Kardamom und Koriandersamen in einer Pfanne anrösten bis Knackgeräusche zu hören sind. Dann in eine Schüssel geben und nach dem Abkühlen die anderen Gewürze, bis auf Salz und Pfeffer zugeben, die Gewürze vermischen und zur Seite stellen.
-Die Zwiebeln, die Chilis und den Knoblauch in Würfel schneiden und im Olivenöl andünsten. Zwischenzeitlich die Hühner- oder Putenbrust und die Paprikaschote in Würfel (ca. 1 cm Kantenlänge) schneiden und das Fleisch im Sonnenblumenöl scharf und kurz anbraten.
-Die angedünsteten Zutaten zu dem Fleisch geben, nochmals bei starker Hitze rösten um Röststoffe zu entwickeln. Den Tequila oder Brandy zugeben, sobald der Alkohol verkocht ist mit dem Wasser ablöschen. Den Mais, die Berberitze  und den Paprika zugeben, das Ganze 15 Minuten bei mittlerer Hitze ohne Deckel köcheln lassen.  
-Die Bohnen und die Gewürze zugeben und alles nochmals 15 Minuten ohne Deckel köcheln lassen.
-Das Chili in einer Schüssel servieren und Weißbrot dazu reichen.
 
 
 \section{Fisch}
