--- a/Kapitel_3 Gemüse und Pilzel.tex
+++ b/Kapitel_3 Gemüse und Pilzel.tex
@@ -28,9 +28,9 @@
 \end{itemize}
 	
 \paragraph{Zubereitung}
-Den Zitronensaft, das Öl, das Salz und den Zucker mit eine kleinen Schneebesen 
+Den Zitronensaft, das Öl, das Salz und den Zucker mit einem kleinen Schneebesen 
 verrühren. Je ein Drittel der Spargel auf einen Bogen Backpapier nebeneinander 
-legen und mit einem drittel der Marinade beträufeln. Das Backpapier 
+legen und mit einem Drittel der Marinade beträufeln. Das Backpapier 
 einschlagen, sodass dichte Päckchen entstehen. Diese Päckchen in Alufolie 
 einschlagen und bei ca. 200°C 20-25 Minuten auf der indirekten Zone bissfest 
 garen. Die Spargel mit Lavendelbutter Kapitel~\ref{Chapter6} \vref{LavButter} 
@@ -40,10 +40,25 @@ bestreichen und servieren. Die Aromatik ist unbeschreiblich.
 
 \paragraph{Geräte}
 
+\begin{itemize}[noitemsep]
+	\item Gasgrill mit Plancha
+\end{itemize}
+
 \paragraph{Zutaten}
+
+\begin{itemize}[noitemsep]
+	\item 1 großer Blumenkohl
+	\item grobes Himalaya-Salz aus der Mühle
+	\item Olivenöl
+\end{itemize}
 
 \paragraph{Zubereitung}
 
+Den Grill auf ca. 200°C vorheizen. Den Blumenkohl in ca. 2 cm dicke 
+Scheiben schneiden. Die Blumenkohlscheiben mit Olivenöl beträufeln und 
+salzen. Die Blumenkohlschnitzel auf der Plancha von beiden Seiten anbraten, 
+bis sie stark gebräunt sind. Warm servieren und eventuell eine Vinaigrette 
+dazu reichen.
 
 \subsection{Gegrillter Rosenkohl}
 
@@ -102,7 +117,7 @@ bestreichen und servieren. Die Aromatik ist unbeschreiblich.
 	\item 1 Kartoffel
 	\item 1 Brioche-Bun
 	\item Salat
-	\item Mayonnaise
+	\item Orangen-Mayonnaise
 \end{itemize}
 
 \paragraph{Zubereitung}
