--- a/Kapitel_4. Leckeres aus dem Holzbackofen.tex
+++ b/Kapitel_4. Leckeres aus dem Holzbackofen.tex
@@ -5,7 +5,7 @@ Outdoor-Kochvergnügen.
 Die Einsatzmöglichkeiten sind schier unerschöpflich. Fast alles das auf
 dem Herd oder dem Grill gemacht wird, ist auch im Backofen möglich. Ob
 Fleisch, Fisch, Gemüse, Pizzen, Brote oder Desserts das alles gelingt im 
-Holz-backofen. Der Kreativität wird keine Grenzen gesetzt. Das Charmante an
+Holzbackofen. Der Kreativität wird keine Grenzen gesetzt. Das Charmante an
 dieser Zubereitungsmethode ist die lange Haltezeit der Temperatur. Pizzen
 werden jenseits der 300 ℃ gebacken, danach kann locker noch ein 
 Holzofenbrot gebacken werden. So kann die Restwärme noch sinnvoll genutzt
@@ -16,7 +16,7 @@ werden.
 	\begin{minipage}{1\textwidth}
 		\centering
 		\includegraphics[width=.9\linewidth]{pics/Backofen}
-		\captionof{figure}{HolzbBackofen}
+		\captionof{figure}{HolzBackofen}
 		\label{fig:Backofen}
 	\end{minipage}
 \end{figure}
@@ -51,7 +51,8 @@ werden.
 
 \paragraph{Zubereitung }
 Das Mehl in einer Rührschüssel vorlegen. Von dem Wasser ca. 100 ml 
-abnehmen um die Hefe aufzulösen. Den Rest des Wassers zu dem Mehl geben 
+abnehmen um die Hefe aufzulösen. Den Rest des Wassers zu dem Mehl 
+geben 
 und das Ganze mit einem Kochlöffel verrühren bis das gesamte Wasser 
 aufgenommen wurde. Den Teig  abdecken und 30 Minuten ruhen lassen. Nach 
 dem Ruhen das Olivenöl und das Wasser mit der aufgelösten Hefe zugeben und 
@@ -70,7 +71,7 @@ Stunden im Kühlschrank gehen lassen.
 Die Zwiebeln klein schneiden und im Olivenöl andünsten, nach einiger Zeit den 
 gehackten Knoblauch zugeben. In der Zwischenzeit die frischen Tomaten in 
 Stücke schneiden und zusammen mit den passierten Tomaten zu den 
-angedünsteten Zwibeln geben und köcheln lassen bis die Tomaten verkocht 
+angedünsteten Zwiebeln geben und köcheln lassen bis die Tomaten verkocht 
 sind. Je nach Geschmack die Soße stückig lassen oder durch ein Sieb streichen.
 Falls gewünscht Kräuter zugeben und mit Salz abschmecken.
 
